--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   "dependencies": {
     "axios": "^0.21.4",
     "core-js": "^3.6.5",
+    "element-plus": "^1.1.0-beta.19",
     "json-server": "^0.16.3",
+    "mitt": "^3.0.0",
     "node-sass": "^6.0.1",
     "sass-loader": "^10",
+    "unplugin-element-plus": "^0.1.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.11"
   },
